Fixed overlapping text bug

--- a/src/assets/css/components/swipe-card.scss
+++ b/src/assets/css/components/swipe-card.scss
@@ -42,7 +42,10 @@
     &:nth-child(1),
     &:nth-child(2){
         opacity: 1;
-    }
+    }   
+}
 
-    
+.swipe-card__heading {
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
